k8s/mongodbapi-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodbapi-nodeport
spec:
  type: NodePort
  selector:
    app: mongodbapi-pod
  ports:
    - port: 80
      targetPort: 80
