k8s/mysqlapi-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqlapi-nodeport
spec:
  type: NodePort
  selector:
    app: mysqlapi-pod
  ports:
    - port: 80
      targetPort: 80
